--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                     <img src="https://fpt.vn/assets/images/fpt-logo.svg" alt="">
                 </div>
                 <ul class="nav-list flex" id="navtop">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Sevice</a></li>
-                    <li><a href="">Concat</a></li>
-                    <li><a href="">Product</a></li>
+                    <li><a href="tel:0961232585">Home</a></li>
+                    <li><a href="tel:0961232585">About</a></li>
+                    <li><a href="tel:0961232585">Sevice</a></li>
+                    <li><a href="tel:0961232585">Concat</a></li>
+                    <li><a href="tel:0961232585">Product</a></li>
                 </ul>
                 <div class="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg>
@@ -159,7 +159,7 @@
                         <p>Truy cập tốc độ cao, ai cũng có thể đăng ký, chơi game, live streamm lướt net không giới hạn tốc độ
                             tốc độ có thê lên tới một 1GB tùy vào thiết bị, thiết bị hỗ trợ mặc định 2.4 và 5G
                         </p>
-                        <a href="">Xem thêm</a>
+                        <a href="tel:0961232585">Xem thêm</a>
                     </li>
                     <li>
                         <img src="./img/img-p (2).jpg" alt="">
@@ -168,7 +168,7 @@
                             Lắp đặt mọi địa hình, chống nước, xoay 360, báo động, báo chộm, đàm thoại 2 chiều, thẻ nhớ hoặc không thẻ nhớ,
                             thao tác và kiểm soát các tính năng dễ dàng qua điện thoại, ai cũng có thể sử dụng
                         </p>
-                        <a href="">Xem thêm</a>
+                        <a href="tel:0961232585">Xem thêm</a>
                     </li>
                     <li>
                         <img src="./img/img-p (3).jpg" alt="">
@@ -177,7 +177,7 @@
                             Truyền hình 4k giọng nói, đăng ký một lần sử dụng nhiều thiết bị, dễ dàng sử dụng với mọi lứa tuổi, có thể 
                             sử dụng qua đầu thu hoặc đăng nhập trực tiếp trên thiết bị thông minh để sử dụng
                         </p>
-                        <a href="">Xem thêm</a>
+                        <a href="tel:0961232585">Xem thêm</a>
                     </li>
                 </ul>
                 <div class="desc">
@@ -200,25 +200,25 @@
                 <ul class="cat-list flex">
                     <li>
                         <img src="https://fpt.vn/assets/images/fpt-logo.svg" alt="">
-                        <a href="">
+                        <a href="tel:0961232585">
                             <h3>Cáp quang doanh nghiệp</h3>
                         </a>
                     </li>
                     <li>
                         <img src="https://fpt.vn/assets/images/fpt-logo.svg" alt="">
-                        <a href="">
+                        <a href="tel:0961232585">
                             <h3>Cáp quang cá nhân</h3>
                         </a>
                     </li>
                     <li>
                         <img src="https://fpt.vn/assets/images/fpt-logo.svg" alt="">
-                        <a href="">
+                        <a href="tel:0961232585">
                             <h3>Cáp quang Hộ gia đình</h3>
                         </a>
                     </li>
                     <li>
                         <img src="https://fpt.vn/assets/images/fpt-logo.svg" alt="">
-                        <a href="">
+                        <a href="tel:0961232585">
                             <h3>Cammera thông minh</h3>
                         </a>
                     </li>
