--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <li>Tặng Công Lắp Đặt Trong 20km Trị Giá 100.000đ</li>
                     </ul>
 
-                    <a href="" class="btn buy">Mua ngay
+                    <a href="" class="btn buys">Mua ngay
                         <small>Gia hàng tan toi và lắp đặt trong ngày
                         </small>
                     </a>
