--- a/index.html
+++ b/index.html
@@ -26,8 +26,14 @@
                     <li><a href="">Concat</a></li>
                     <li><a href="">Product</a></li>
                 </ul>
-
-                <div class="store"><a href=""><i class="fas fa-store"><sup>1</sup></i></a></div>
+            <!-- icon store -->
+                <div class="store">
+                    <a href="">
+                        <i class="fas fa-store">
+                            <sup>1</sup>
+                        </i>
+                    </a>
+                </div>
 
                 <div class="icon" onclick="document.getElementById('mobile').style.display = 'block'">
                     <i class="fas fa-bars"></i>
@@ -56,10 +62,54 @@
 
         <!--  -->
         <div class="subDetail">
-            <a href="">Home</a> /
+            <!-- <a href="">Home</a> /
             <a href="">category</a> /
-            <a href="">title</a> /
+            <a href="">title</a> / -->
+            <h2>Danh mục liên quan</h2>
         </div>
+
+          <!-- /* Category Home */ -->
+
+          <div class="category">
+            <div class="container cat--container">
+                <div class="cat">
+                    <img src="./img/img (9).jpg" alt="">
+                    <div class="cat--content">
+                        <h2>Internet</h2>
+                        <p>Truy cập tốc độ cao, ai cũng có thể đăng ký, chơi game, live streamm lướt net không giới hạn tốc độ
+                            tốc độ có thê lên tới một 1GB tùy vào thiết bị, thiết bị hỗ trợ mặc định 2.4 và 5G</p>
+                        <a href="#">Xem them</a>
+                    </div>
+                </div>
+
+                <div class="cat">
+                    <img src="./img/img (5).jpg" alt="">
+                    <div class="cat--content">
+                        <h2>Camera</h2>
+                        <p>Lắp đặt mọi địa hình, chống nước, xoay 360, báo động, báo chộm, đàm thoại 2 chiều, thẻ nhớ hoặc không thẻ nhớ,
+                            thao tác và kiểm soát các tính năng dễ dàng qua điện thoại, ai cũng có thể sử dụng</p>
+                        <a href="#">Xem them</a>
+                    </div>
+                </div>
+
+                <div class="cat">
+                    <img src="./img/img (7).jpg" alt="">
+                    <div class="cat--content">
+                        <h2>Truyen Hinh</h2>
+                        <p>Truyền hình 4k giọng nói, đăng ký một lần sử dụng nhiều thiết bị, dễ dàng sử dụng với mọi lứa tuổi, có thể 
+                            sử dụng qua đầu thu hoặc đăng nhập trực tiếp trên thiết bị thông minh để sử dụng</p>
+                        <a href="#">Xem them</a>
+                    </div>
+                </div>
+            </div>
+          </div>
+<!-- end -->
+
+<div class="subDetail">
+    <a href="">Home</a> /
+    <a href="">category</a> /
+    <a href="">title</a> /
+</div>
         
         <div class="detail">
             <div class="container detail--container">
@@ -121,6 +171,7 @@
             </div>
         </div>
         <!-- end detail -->
+
         <div class="subTitle">
             <h2>Cáp quang cá nhân</h2>
         </div>
@@ -352,7 +403,7 @@
 
         <div class="related">
             <div class="container">
-                <h2 id="page-title">Sản phẩm liên quan</h2>
+                <h2 id="page-title">Danh mục liên quan</h2>
                 <ul class="related-list flex">
                     <li>
                         <img src="./img/net.jpg" alt="">
